RESOLVED FIXED205635
XMLSerializer doesn't correctly encode entities in <style> element
https://bugs.webkit.org/show_bug.cgi?id=205635
Summary XMLSerializer doesn't correctly encode entities in <style> element
Xidorn Quan
Reported 2019-12-29 20:52:07 PST
Created attachment 386505 [details] testcase Please see the testcase, in Safari, it shows: > <style xmlns="http://www.w3.org/1999/xhtml">/* & */</style> while in both Firefox and Chrome it shows: > <style xmlns="http://www.w3.org/1999/xhtml">/* &amp; */</style> The testcase basically just invokes XMLSerializer's serializeToString to serialize the following element: > <style>/* & */</style> and the output from Safari is not a valid XML.
Attachments
testcase (228 bytes, text/html)
2019-12-29 20:52 PST, Xidorn Quan
no flags
Patch (4.13 KB, patch)
2020-01-02 15:11 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-01-02 15:11:12 PST
WebKit Commit Bot
Comment 2 2020-01-02 18:53:05 PST
Comment on attachment 386635 [details] Patch Clearing flags on attachment: 386635 Committed r253988: <https://trac.webkit.org/changeset/253988>
WebKit Commit Bot
Comment 3 2020-01-02 18:53:06 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2020-01-02 18:54:31 PST
Note You need to log in before you can comment on or make changes to this bug.