XMLSerializer doesn't correctly encode entities in <style> element https://bugs.webkit.org/show_bug.cgi?id=205635

Reviewed by Alex Christensen.

Source/WebCore:

As per [1], when doing an XML serialization of text, we should escape '<', '>' and '&', even
if the text is inside a <style> element. The <style> element exception is for HTML serialization [2].

[1] https://w3c.github.io/DOM-Parsing/#xml-serializing-a-text-node
[2] https://html.spec.whatwg.org/#serialising-html-fragments

Test: fast/dom/xmlserializer-ampersand-in-style.html

* editing/MarkupAccumulator.cpp:
(WebCore::MarkupAccumulator::entityMaskForText const):

LayoutTests:

Add layout test coverage.

* fast/dom/xmlserializer-ampersand-in-style-expected.txt: Added.
* fast/dom/xmlserializer-ampersand-in-style.html: Added.


Canonical link: https://commits.webkit.org/218864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253988 268f45cc-cd09-0410-ab3c-d52691b4dbfc